@@ -1,3 +1,9 @@
+2006-11-03  Rick Moseley  <rmoseley@redhat.com>
+
+	* DOMFactory.java: Added capability to add multiple source files to 
+	the DOM.
+	* DOMSource.java:  Ditto.
+
 2006-11-02  Mike Cvet  <mcvet@redhat.com>
 
 	* DOMFactory.java (createDOM): Check for null DwflLine from the
